Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.3.0 Beta1
-
Fix Version/s: 5.3.0 RC1
-
Component/s: Widgets: Widgets and Dialogs
-
Labels:None
-
Environment:Windows 8.1
Windows 7,
Linux
-
Commits:4dbef58c3d2a63f59c5ae32ba9dc47a2a9157474 (release, 17.4.2014, 5.3.0)
Description
plain QCheckBox e.g. being inserted with qtcreater cannot be rapidly clicked in a row due to a dead time of approx 500ms after being clicked.
This behaviour was not there in 5.2.2.
Steps to reproduce:
- Compile qtbug38319.zip
- Click checkbox in rapid sequence
- Note it toggles slower, reports intervals of about 250ms and higher in Qt 5.3 and generates more events (comparing to about 150ms Qt 4, 5.2.1, where it immediately toggles)
Attachments
Issue Links
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
- relates to
-
QTBUG-24649 Wrong mouse click behavior for QWidget
-
- Closed
-
-
QTBUG-38319 [REG 5.2.1->5.3] Gui elements have a dead time of approximately half a second after being pressed
-
- Closed
-
-
QTBUG-36423 QPushButton does not accept mouseDoubleClickEvent
-
- Closed
-
- resulted from
-
QTBUG-25831 Event behavior for QEvent::MouseButtonDblClick changed since Qt 4
-
- Closed
-