Restore Qt 4 behavior in default double click handler

Revert 3bb902495291c50a2f06e8e03a62a647db3e5cd4. That fix was an attempt
to handle the issue that has been fixed in 5.3 by
9063edef796ad10eb9ac2229627f36d60168f0e2 and should have been reverted
when the new approach, that restores Qt 4 behavior for widgets, was
introduced.

Task-number: QTBUG-38242
Task-number: QTBUG-36423
Change-Id: I8f8a82da22605fac90543492e9b2cd2b568544e7
Reviewed-by: Jørgen Lind <jorgen.lind@digia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>